# Photo_sort

./: .gitignore  CLAUDE.md  readme.md  requirements.txt  sort.py  sort_gpt.py  sortt.py  unified_sort.py
imgsim/: asdf.md  imgsim.py
old/: convert.py  readme.md  requirements.txt  simple_sort.py  unified_sort_project_files.txt
old/unified-sort_legacy/: .pre-commit-config.yaml  Makefile.txt
old/unified-sort_legacy/src/unified_sort/: io.py  utils.py
unified-sort/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
unified-sort/.github/workflows/: ci.yml
unified-sort/app/: streamlit_app.py
unified-sort/src/unified_sort/: __init__.py  analysis.py  auto_sort.py  batch.py  core.py  detection.py  exif_adjust.py  export.py  features.py  gdrive.py  helpers.py  io_utils.py  metrics.py  nn_iqa.py  pipeline.py
unified-sort/src/unified_sort.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
unified-sort/tests/: README.md  __init__.py  conftest.py  test_auto_sort.py  test_core.py
unified-sort_legacy/: requirements.txt
unified-sort_legacy/app/: streamlit_app.py
unified-sort_legacy/src/unified_sort/: preview.py  types.py
