[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-sort"
version = "0.1.0"
description = "Unified Image Quality Classifier & Streamlit UI"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.25",
  "opencv-python>=4.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pillow>=9.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
heif = ["pillow-heif>=0.13"]
raw = ["rawpy>=0.18", "imageio>=2.31"]
trash = ["send2trash>=1.8"]


