[metadata]
name = unified-sort
version = 0.1.0
author = John Doe
author_email = johndoe@example.com
description = Unified Image Quality Classifier
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johndoe/unified-sort
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.extras_require]
heif =
    pillow-heif>=0.13
raw =
    rawpy>=0.18
    imageio>=2.31
trash =
    send2trash>=1.8
